fix wrong alignment

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -75,6 +75,7 @@ a:hover {
 
 .main-links {
   margin-left: 50px;
+  margin-top: -10px;
   -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
